Simplify requirements and Docker setup, we don't need alpine

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 rx
-#ruuvitag-sensor can't have ruuvitag-sensor here, because it depends on psutil, but we don't need that, and building n alpine would be a pain
+#can't have ruuvitag-sensor here, because it depends on psutil, but we don't need that, and building n alpine would be a pain
+ruuvitag-sensor
 hbmqtt
 influxdb
 
